--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
 
     <!-- INICIO TOPBAR -->
     <header class="topbar">
-        <div class="topbar__logo">
-            <span>Lá Na Rê</span>
-            <span class="subtitle">Café</span>
-        </div>
+        <a href="/">
+            <div class="topbar__logo">
+                <span>Lá Na Rê</span>
+                <span class="subtitle">Café</span>
+            </div>
+        </a>
 
         <div class="topbar__menu">
             <ul class="topbar__list">
@@ -138,48 +140,50 @@
                 </ul>
             </div>
         </section>
-
-        <footer>
-            <div class="footer__content">
-                <div class="footer__infos">
-                    <img src="./src/assets/img/logo.png" alt="Logo LaNaRe">
-                    <span>
-                        Praça XV de Novembro, 128 - Centro,<br>
-                        São José do Rio Pardo<br>
-                        (19) 9 9757-2081<br>
-                        (19) 9 9262-9629
-                    </span>
-                </div>
-                <div class="footer__menu">
-                    <span>MENU</span>
-                    <ul class="footer__menu-list">
-                        <li><a href="/">HOME</a></li>
-                        <li><a href="#sobre">SOBRE</a></li>
-                        <li><a href="cardapio">CARDÁPIO</a></li>
-                        <li><a href="#contatos">CONTATO</a></li>
-                    </ul>
-                </div>
-                <div class="footer__horarios">
-                    <span>HORÁRIOS</span>
-                    <ul class="footer__horarios-list">
-                        <li>Segunda: 7:00 às 18:00</li>
-                        <li>Terça: 7:00 às 18:00</li>
-                        <li>Quarta: 7:00 às 18:00</li>
-                        <li>Quinta: 7:00 às 18:00</li>
-                        <li>Sexta: 7:00 às 18:00</li>
-                        <li>Sábado: 7:00 às 13:00</li>
-                        <li>Domingo: 13:00 às 17:00</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer__direitos">
-                <p>
-                    Todos os direitos reservados<br>
-                    Desenvolvido <span class="footer__developer">Tiezzi Junior</span>
-                </p>
-            </div>
-        </footer>
     </main>
+
+    <!-- INICIO FOOTER -->
+    <footer>
+        <div class="footer__content">
+            <div class="footer__infos">
+                <img src="./src/assets/img/logo.png" alt="Logo LaNaRe">
+                <span>
+                    Praça XV de Novembro, 128 - Centro,<br>
+                    São José do Rio Pardo<br>
+                    (19) 9 9757-2081<br>
+                    (19) 9 9262-9629
+                </span>
+            </div>
+            <div class="footer__menu">
+                <span>MENU</span>
+                <ul class="footer__menu-list">
+                    <li><a href="/">HOME</a></li>
+                    <li><a href="#sobre">SOBRE</a></li>
+                    <li><a href="cardapio">CARDÁPIO</a></li>
+                    <li><a href="#contatos">CONTATO</a></li>
+                </ul>
+            </div>
+            <div class="footer__horarios">
+                <span>HORÁRIOS</span>
+                <ul class="footer__horarios-list">
+                    <li>Segunda: 7:00 às 18:00</li>
+                    <li>Terça: 7:00 às 18:00</li>
+                    <li>Quarta: 7:00 às 18:00</li>
+                    <li>Quinta: 7:00 às 18:00</li>
+                    <li>Sexta: 7:00 às 18:00</li>
+                    <li>Sábado: 7:00 às 13:00</li>
+                    <li>Domingo: 13:00 às 17:00</li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer__direitos">
+            <p>
+                Todos os direitos reservados<br>
+                Desenvolvido <span class="footer__developer">Tiezzi Junior</span>
+            </p>
+        </div>
+    </footer>
+    <!-- INICIO FOOTER -->
 
 </body>
 
