--- a/cardapio.html
+++ b/cardapio.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="./src/style/vars.css">
     <!-- CARREGA O CSS PRINCIPAL -->
     <link rel="stylesheet" href="./src/style/style.css">
+    <!-- CARREGA A RESPONSIVIDADE -->
+    <link rel="stylesheet" href="./src/style/responsive.css">
 </head>
 
 <body>
