--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
     <link rel="stylesheet" href="./src/style/vars.css">
     <!-- CARREGA O CSS PRINCIPAL -->
     <link rel="stylesheet" href="./src/style/style.css">
+    <!-- CARREGA A RESPONSIVIDADE -->
+    <link rel="stylesheet" href="./src/style/responsive.css">
+
+
+    <!-- INICIA O JQUERY -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- CDN do Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
 </head>
 
@@ -35,6 +44,10 @@
                 <li><a href="cardapio">CARDÁPIO</a></li>
                 <li><a href="#contatos">CONTATO</a></li>
             </ul>
+
+            <button class="topbar__close-menu">
+                <i class="fa-solid fa-bars 2"></i>
+            </button>
         </div>
     </header>
     <!-- FIM TOPBAR -->
